Add set new password form

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -2,6 +2,7 @@
   [formGroup]="signInForm"
   (ngSubmit)="onSubmit($event)"
   class="example-form card-content"
+  *ngIf="!newPasswordRequired"
 >
   <section class="login-form-field">
     <span>
@@ -49,6 +50,45 @@
       [className]="'login-button'"
       [imgClassName]="'icon-white'"
       [disabled]="signInForm.invalid"
+    ></app-base-button>
+    <mat-spinner *ngIf="loading" diameter="35" class="loader"></mat-spinner>
+  </section>
+</form>
+
+<form
+  [formGroup]="newPasswordForm"
+  *ngIf="newPasswordRequired"
+  (ngSubmit)="onSubmit($event)"
+  class="example-form card-content"
+>
+  <section class="login-form-field">
+    <span>
+      <img src="assets/images/Lock.svg" alt="Lock icon" class="icon-gray" />
+    </span>
+    <input
+      type="password"
+      placeholder="password"
+      autocomplete="off"
+      formControlName="newPassword"
+    />
+  </section>
+  <mat-error
+    *ngIf="newPassword?.invalid && newPassword?.touched"
+    class="error-validation"
+  >
+    Password is not correct. Try again
+  </mat-error>
+  <mat-error *ngIf="errorMessage" class="error-response">
+    {{ errorMessage }}
+  </mat-error>
+  <section class="submit-button">
+    <app-base-button
+      type="submit"
+      [imgUrl]="'assets/images/Unlock.svg'"
+      [buttonText]="'Postavi password'"
+      [className]="'login-button'"
+      [imgClassName]="'icon-white'"
+      [disabled]="newPasswordForm.invalid"
     ></app-base-button>
     <mat-spinner *ngIf="loading" diameter="35" class="loader"></mat-spinner>
   </section>
